--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
         <div class="container">
             <div class="row">
                 <!--Section for name-->
-                <div class="col-4">
+                <div class="col-lg-4">
                     <h1>Jacqueline Rivera</h1>
                 </div>
 
                 <!--Section for name will adjust color later -->
-                <div class="col-8">
+                <div class="col-lg-8">
                     <ul class="nav justify-content-end">
                         <!--Links about me tab-->
                         <li class="nav-item">
@@ -41,7 +41,7 @@
                           <a class="nav-link" href="assets/index.html">About</a>
                         </li>
                     </ul>
-                    
+
                 </div>
             </div>
         </div>
