added image and image folder

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         </li>
                         <!--Links index aka about me tab-->
                         <li class="nav-item">
-                          <a class="nav-link" href="assets/index.html">About</a>
+                          <a class="nav-link" href="index.html">About</a>
                         </li>
                     </ul>
 
