added footer to pages

--- a/index.html
+++ b/index.html
@@ -41,12 +41,16 @@
                           <a class="nav-link" href="index.html">About</a>
                         </li>
                     </ul>
-
                 </div>
             </div>
         </div>
     </Nav>
 
+
+    <!--Footer-->
+    <footer >
+        <h2>Made by Jacqueline Rivera</h2>
+    </footer>
 
 
 
