fixed background and footer

--- a/assets/portfolio.html
+++ b/assets/portfolio.html
@@ -46,6 +46,14 @@
             </div>
         </div>
     </Nav>
+    
+    <section>
+
+
+    </section>
+    <aside>
+
+    </aside>
 
 
     <footer >
