--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
         <div class="row">
 
             <!--Divideded context in two part-->
-            <div class="col-lg-9">
+            <div class="col-lg-8">
                 <!--this section will contain both the image and article-->
                 <section>
                     <div class="row">
                         <div class="col-lg-12">
-                            <p>About me</p>
+                            <p id="sectiontitle">About me</p>
                         </div>
                     </div>
                     
@@ -69,7 +69,7 @@
 
                         <!--Text about me-->
                         <div class="col-lg-8">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque perferendis quibusdam officia asperiores possimus aut, eos assumenda rerum temporibus iure magni, quisquam ab non a dolorem dolore aspernatur sapiente accusamus.</p>
+                            <p class="ParaText">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque perferendis quibusdam officia asperiores possimus aut, eos assumenda rerum temporibus iure magni, quisquam ab non a dolorem dolore aspernatur sapiente accusamus.</p>
                         </div>
 
                     </div>
@@ -78,15 +78,15 @@
                     <div class="row">
                         <div class="col-lg-12">
                             <!--fill with text -->
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor at sunt provident suscipit nesciunt nobis illum, explicabo atque eum, voluptate voluptatibus assumenda odit autem omnis quaerat numquam? Minus, perferendis vel.</p>
+                            <p class="ParaText">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor at sunt provident suscipit nesciunt nobis illum, explicabo atque eum, voluptate voluptatibus assumenda odit autem omnis quaerat numquam? Minus, perferendis vel.</p>
                         </div> 
                     </div>
                    
                 </section>
 
                 <!--This section will be a place holder-->
-                <div class="col-lg-3">
-                     <aside>
+                <div class="col-lg-4">
+                     <aside class="clearfix">
                     </aside>
                 </div>
             </div>
