--- a/assets/contact.html
+++ b/assets/contact.html
@@ -81,6 +81,11 @@
                               <label for="exampleFormControlTextarea1">Message</label>
                               <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                             </div>
+
+                            <div class="col-auto">
+                                <button type="submit" class="btn btn btn-info mb-2">Submit</button>
+                            </div>
+    
                         </form>
 
                     </div>
