added images and link to portfolio

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
     <!--Footer-->
     <footer >
-        <h2>Made by Jacqueline Rivera</h2>
+        <p>Made by Jacqueline Rivera</p>
     </footer>
 
 
