--- a/assets/contact.html
+++ b/assets/contact.html
@@ -106,7 +106,7 @@
     </div>
 
     <footer >
-        <h2>Made by Jacqueline Rivera</h2>
+        <p>Made by Jacqueline Rivera</p>
     </footer>
 
 
