changed insta to linked in and rearranged

--- a/assets/portfolio.html
+++ b/assets/portfolio.html
@@ -78,25 +78,26 @@
                     <!--Row two for images-->
                     <div class="row">
                         <div class="col-lg-6">
-                            <!--link to my youtube page with a picture-->
-                            <a href="https://www.youtube.com/channel/UCptERRYa6vAMis8rmbNSZEw/featured?view_as=subscriber">
-                            <img srcset="Images/YoutubePage.png" alt="Youtube-Page-For-JackieRivera2.3" class="portImg">
+                           <!--image and link to github page-->
+                            <a href="https://github.com/Jacqueline8996">
+                            <img srcset="Images/GitHubPage.png" alt="JacquelineRivera-Git-Hub_page" class="portImg">
                             </a>
                         </div>
 
                         <div class="col-lg-6">
-                            <!--image and link to instagram page-->
-                            <a href="https://www.instagram.com/jackierivera2.3/">
-                            <img srcset="Images/instagram.png" alt="Instagram-for-Jackierivera2.3" class="portImg">
+                            <!--image and link to my linked in-->
+                            <a href="www.linkedin.com/in/jacqueline-rivera">
+                            <img srcset="Images/LinkedIn.png" alt="LinkedIn-Profile" class="portImg">
                             </a>
                         </div>
                     </div>
 
                     <div class="row">
                         <div class="col-lg-6">
-                            <!--image and link to github page-->
-                            <a href="https://github.com/Jacqueline8996">
-                            <img srcset="Images/GitHubPage.png" alt="JacquelineRivera-Git-Hub_page" class="portImg">
+                            
+                            <!--link to my youtube page with a picture-->
+                            <a href="https://www.youtube.com/channel/UCptERRYa6vAMis8rmbNSZEw/featured?view_as=subscriber">
+                            <img srcset="Images/YoutubePage.png" alt="Youtube-Page-For-JackieRivera2.3" class="portImg">
                             </a>
                         </div>
                         <div class="col-lg-6">
