updated the link for linked in

--- a/assets/portfolio.html
+++ b/assets/portfolio.html
@@ -86,7 +86,7 @@
 
                         <div class="col-lg-6">
                             <!--image and link to my linked in-->
-                            <a href="www.linkedin.com/in/jacqueline-rivera">
+                            <a href="https://www.linkedin.com/in/jacqueline-rivera/">
                             <img srcset="Images/LinkedIn.png" alt="LinkedIn-Profile" class="portImg">
                             </a>
                         </div>
@@ -94,7 +94,7 @@
 
                     <div class="row">
                         <div class="col-lg-6">
-                            
+
                             <!--link to my youtube page with a picture-->
                             <a href="https://www.youtube.com/channel/UCptERRYa6vAMis8rmbNSZEw/featured?view_as=subscriber">
                             <img srcset="Images/YoutubePage.png" alt="Youtube-Page-For-JackieRivera2.3" class="portImg">
