updated about page

--- a/index.html
+++ b/index.html
@@ -69,7 +69,12 @@
 
                         <!--Text about me-->
                         <div class="col-lg-8">
-                            <p class="ParaText">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque perferendis quibusdam officia asperiores possimus aut, eos assumenda rerum temporibus iure magni, quisquam ab non a dolorem dolore aspernatur sapiente accusamus.</p>
+                            <p class="ParaText">
+                                I graduated from the University of Maryland Baltimore County otherwise known as UMBC in 2018. 
+                                I obtained my Bachlores in Science in Biological Science with a minor in Psychology. 
+                                During my Time at UMBC I was very active in the latino Community ,since both of my Parents are from El Salvador.
+                                Due to that  I am fluent in Spanish. Currently I work as a Data coordinator at Catalent Gene Therapy.
+                            </p>
                         </div>
 
                     </div>
@@ -77,11 +82,15 @@
                     <!--second paragraph-->
                     <div class="row">
                         <div class="col-lg-12">
-                            <!--fill with text -->
-                            <p class="ParaText">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor at sunt provident suscipit nesciunt nobis illum, explicabo atque eum, voluptate voluptatibus assumenda odit autem omnis quaerat numquam? Minus, perferendis vel.</p>
+                            <!--Text about my hobbies -->
+                            <p class="ParaText">
+                                In my free time I like to paint and draw.
+                                I especially like the hispanic/Latin elements of painters like Diego Rivera and Frida Kahlo. 
+                                This year I started a Youtube page, which I am trying to become more active on. 
+                                I have included links to my socials on the profile page. 
+                            </p>
                         </div> 
-                    </div>
-                   
+                    </div>  
                 </section>
             </div>
             
