--- a/assets/portfolio.html
+++ b/assets/portfolio.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Bootstrap will be being used for this page-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
     <!--Linking local style sheet -->
     <link rel="stylesheet" href="style.css">
     <!--This tab is for the portfolio page-->
@@ -21,27 +23,32 @@
         <div class="container">
             <div class="row">
                 <!--Section for name-->
-                <div class="col-4">
+                <div class="col-lg-4">
                     <h1>Portfolio</h1>
                 </div>
 
+                <!--place holder column-->
+                <div class="col-lg-4">
+                </div>
+
                 <!--Section for name will adjust color later -->
-                <div class="col-8">
-                    <ul class="nav justify-content-end">
-                        <!--Links about me tab-->
-                        <li class="nav-item">
-                          <a class="nav-link" href="contact.html">Contact</a>
-                        </li>
-                        <!--Links portfolio tab-->
-                        <li class="nav-item">
-                          <a class="nav-link" href="portfolio.html">Portfolio</a>
-                        </li>
-                        <!--Links index aka about me tab-->
-                        <li class="nav-item">
-                          <a class="nav-link" href="../index.html">About</a>
-                        </li>
-                    </ul>
-                    
+                <div class="col-lg-4">
+                    <div class="navbar">
+                        <ul class="nav justify-content-end">
+                            <!--Links about me tab-->
+                            <li class="nav-item">
+                                <a class="nav-link" href="contact.html">Contact</a>
+                            </li>
+                            <!--Links portfolio tab-->
+                            <li class="nav-item">
+                                <a class="nav-link" href="portfolio.html">Portfolio</a>
+                            </li>
+                            <!--Links index aka about me tab-->
+                            <li class="nav-item">
+                                <a class="nav-link" href="../index.html">About</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
