--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Bootstrap will be being used for this page-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
     <!--Linking local style sheet -->
     <link rel="stylesheet" href="assets/style.css">
     <!--About page is the main page and orginal load-->
@@ -21,26 +23,32 @@
         <div class="container">
             <div class="row">
                 <!--Section for name-->
-                <div class="col-lg-4">
+                <div class="col-md-4">
                     <h1>Jacqueline Rivera</h1>
                 </div>
 
+                <!--place holder column-->
+                <div class="col-md-4">
+                </div>
+
                 <!--Section for name will adjust color later -->
-                <div class="col-lg-8">
-                    <ul class="nav justify-content-end">
-                        <!--Links about me tab-->
-                        <li class="nav-item">
-                          <a class="nav-link" href="assets/contact.html">Contact</a>
-                        </li>
-                        <!--Links portfolio tab-->
-                        <li class="nav-item">
-                          <a class="nav-link" href="assets/portfolio.html">Portfolio</a>
-                        </li>
-                        <!--Links index aka about me tab-->
-                        <li class="nav-item">
-                          <a class="nav-link" href="index.html">About</a>
-                        </li>
-                    </ul>
+                <div class="col-md-4">
+                    <div class="navbar">
+                        <ul class="nav justify-content-end">
+                            <!--Links about me tab-->
+                            <li class="nav-item">
+                            <a class="nav-link" href="assets/contact.html">Contact</a>
+                            </li>
+                            <!--Links portfolio tab-->
+                            <li class="nav-item">
+                            <a class="nav-link" href="assets/portfolio.html">Portfolio</a>
+                            </li>
+                            <!--Links index aka about me tab-->
+                            <li class="nav-item">
+                            <a class="nav-link" href="index.html">About</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
@@ -51,11 +59,11 @@
         <div class="row">
 
             <!--Divideded context in two part-->
-            <div class="col-lg-8">
+            <div class="col-md-8">
                 <!--this section will contain both the image and article-->
                 <section>
                     <div class="row">
-                        <div class="col-lg-12">
+                        <div class="col-md-12">
                             <p id="sectiontitle">About me</p>
                         </div>
                     </div>
@@ -63,12 +71,12 @@
                     <!--Image will be placed as well as first paragraph-->
                     <div class="row">
                         <!--Image will be placed here-->
-                        <div class="col-lg-4">
+                        <div class="col-md-4">
                             <img srcset="assets/Images/JacquelineRivera.jpg" alt="JacquelineRivera" id="image1">
                         </div>
 
                         <!--Text about me-->
-                        <div class="col-lg-8">
+                        <div class="col-md-8">
                             <p class="ParaText">
                                 I graduated from the University of Maryland Baltimore County otherwise known as UMBC in 2018. 
                                 I obtained my Bachlores in Science in Biological Science with a minor in Psychology. 
@@ -82,7 +90,7 @@
                     <!--second paragraph No images so just an article-->
                      <article>
                         <div class="row">
-                            <div class="col-lg-12">
+                            <div class="col-md-12">
                                 <!--Text about my hobbies -->
                                 <p class="ParaText">
                                     In my free time I like to paint and draw.
@@ -95,11 +103,11 @@
                     </article>
 
                 </section>
-                
+
             </div>
             
             <!--This section will be a place holder-->
-            <div class="col-lg-4">
+            <div class="col-md-4">
                 <aside class="clearfix">
                 </aside>
             </div> 
