updated colors of header and update picture for portfolio

--- a/assets/contact.html
+++ b/assets/contact.html
@@ -22,7 +22,8 @@
     <!--Navagator bar-->
     <nav class="navbar navbar-light navbar-expand-md">
 
-        <a class="navbar-brand" href="#">Contact</a>
+        <!--Nav Bar title-->
+        <a class="navbar-brand text-white" href="#">Contact</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar1">
             <span class="navbar-toggler-icon"></span>
         </button>
