--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     <!--Nav Bar that collapse-->
     <nav class="navbar navbar-light navbar-expand-md">
 
-        <a class="navbar-brand" href="#">JacquelineRivera</a>
+        <!--Nav Bar title-->
+        <a class="navbar-brand text-white" href="#">JacquelineRivera</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar1">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -29,7 +30,7 @@
         <div class="collapse navbar-collapse" id="navbar1">
             
             <ul class="navbar-nav ml-auto">
-                
+
             <!--Links to assest -->
             <li class="nav-item ">
                 <a class="nav-link" href="assets/contact.html">Contact</a>
