--- a/assets/portfolio.html
+++ b/assets/portfolio.html
@@ -21,7 +21,8 @@
     <!--Navagator bar-->
     <nav class="navbar navbar-light navbar-expand-md">
 
-        <a class="navbar-brand" href="#">Portfolio</a>
+        <!--Nav Bar title-->
+        <a class="navbar-brand text-white" href="#">Portfolio</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar1">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -46,6 +47,7 @@
             </li>
 
             </ul>
+
         </div>
     </nav>
     
