made adjustment for size 400 , 768 and 990

--- a/assets/portfolio.html
+++ b/assets/portfolio.html
@@ -19,10 +19,10 @@
 <body>
     
     <!--Navagator bar-->
-    <nav class="navbar navbar-light navbar-expand-md">
+    <nav class="navbar navbar-light navbar-expand-lg">
 
         <!--Nav Bar title-->
-        <a class="navbar-brand text-white" href="#">Portfolio</a>
+        <a class="navbar-brand text-white" href="portfolio.html">Portfolio</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar1">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -67,28 +67,28 @@
                     <!--images-->
                     <!--Row one for images-->
                     <div class="row">
-                        <div class="col-lg-6">
+                        <div class="col-md-6">
                             <!--An image and link to the first homework-->
                             <a href="https://jacqueline8996.github.io/Homework1/">
                             <img srcset="Images/homework1.png" alt="Homework1" class="portImg"></a>
                         </div>
-                        <div class="col-lg-6">
+                        <div class="col-md-6">
                             <!--An image and link to the second homework-->
-                            <a href="https://jacqueline8996.github.io/Homework1/">
+                            <a href="https://jacqueline8996.github.io/Homework2/">
                             <img srcset="Images/profile.png" alt="Homework2" class="portImg"></a>
                         </div>
                     </div>
 
                     <!--Row two for images-->
                     <div class="row">
-                        <div class="col-lg-6">
+                        <div class="col-md-6">
                            <!--image and link to github page-->
                             <a href="https://github.com/Jacqueline8996">
                             <img srcset="Images/GitHubPage.png" alt="JacquelineRivera-Git-Hub_page" class="portImg">
                             </a>
                         </div>
 
-                        <div class="col-lg-6">
+                        <div class="col-md-6">
                             <!--image and link to my linked in-->
                             <a href="https://www.linkedin.com/in/jacqueline-rivera/">
                             <img srcset="Images/LinkedIn.png" alt="LinkedIn-Profile" class="portImg">
@@ -97,14 +97,14 @@
                     </div>
 
                     <div class="row">
-                        <div class="col-lg-6">
+                        <div class="col-md-6">
 
                             <!--link to my youtube page with a picture-->
                             <a href="https://www.youtube.com/channel/UCptERRYa6vAMis8rmbNSZEw/featured?view_as=subscriber">
                             <img srcset="Images/YoutubePage.png" alt="Youtube-Page-For-JackieRivera2.3" class="portImg">
                             </a>
                         </div>
-                        <div class="col-lg-6">
+                        <div class="col-md-6">
                             <!--blank -->
                         </div>
                     </div>
