--- a/assets/portfolio.html
+++ b/assets/portfolio.html
@@ -55,11 +55,11 @@
         <div class="row">
 
             <!--Divideded context in two part-->
-            <div class="col-lg-8">
+            <div class="col-md-8">
                 <!--contact information title-->
                 <section>
                     <div class="row">
-                        <div class="col-lg-12">
+                        <div class="col-md-12">
                             <p id="sectiontitle">Portfolio</p>
                         </div>
                     </div>
@@ -113,7 +113,7 @@
             </div>
 
             <!--This section will be a place holder-->
-            <div class="col-lg-4">
+            <div class="col-md-4">
                 <aside class="clearfix">
                 </aside>
             </div>
