--- a/assets/portfolio.html
+++ b/assets/portfolio.html
@@ -55,11 +55,11 @@
         <div class="row">
 
             <!--Divideded context in two part-->
-            <div class="col-md-8">
+            <div class="col-md-10">
                 <!--contact information title-->
                 <section>
                     <div class="row">
-                        <div class="col-md-12">
+                        <div class="col-lg-12">
                             <p id="sectiontitle">Portfolio</p>
                         </div>
                     </div>
@@ -67,12 +67,12 @@
                     <!--images-->
                     <!--Row one for images-->
                     <div class="row">
-                        <div class="col-md-6">
+                        <div class="col-lg-6">
                             <!--An image and link to the first homework-->
                             <a href="https://jacqueline8996.github.io/Homework1/">
                             <img srcset="Images/homework1.png" alt="Homework1" class="portImg"></a>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-lg-6">
                             <!--An image and link to the second homework-->
                             <a href="https://jacqueline8996.github.io/Homework2/">
                             <img srcset="Images/profile.png" alt="Homework2" class="portImg"></a>
@@ -81,14 +81,14 @@
 
                     <!--Row two for images-->
                     <div class="row">
-                        <div class="col-md-6">
+                        <div class="col-lg-6">
                            <!--image and link to github page-->
                             <a href="https://github.com/Jacqueline8996">
                             <img srcset="Images/GitHubPage.png" alt="JacquelineRivera-Git-Hub_page" class="portImg">
                             </a>
                         </div>
 
-                        <div class="col-md-6">
+                        <div class="col-lg-6">
                             <!--image and link to my linked in-->
                             <a href="https://www.linkedin.com/in/jacqueline-rivera/">
                             <img srcset="Images/LinkedIn.png" alt="LinkedIn-Profile" class="portImg">
@@ -97,14 +97,14 @@
                     </div>
 
                     <div class="row">
-                        <div class="col-md-6">
+                        <div class="col-lg-6">
 
                             <!--link to my youtube page with a picture-->
                             <a href="https://www.youtube.com/channel/UCptERRYa6vAMis8rmbNSZEw/featured?view_as=subscriber">
                             <img srcset="Images/YoutubePage.png" alt="Youtube-Page-For-JackieRivera2.3" class="portImg">
                             </a>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-lg-6">
                             <!--blank -->
                         </div>
                     </div>
@@ -113,18 +113,16 @@
             </div>
 
             <!--This section will be a place holder-->
-            <div class="col-md-4">
+            <div class="col-md-2">
                 <aside class="clearfix">
                 </aside>
             </div>
 
         </div>
-       
 
     </div>
 
-
-
+    <!--Footer-->
     <footer>
         <p>Made by Jacqueline Rivera</p>
     </footer>
