--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
                         </div>
                     </div>
 
+                    <!--Second Paragraph-->
                     <div class="row">
                         <div class="col-md-12">
                             <!--Text about my hobbies -->
