added new images and links

--- a/assets/portfolio.html
+++ b/assets/portfolio.html
@@ -69,24 +69,32 @@
                     <div class="row">
                         <div class="col-lg-6">
                             <!--An image and link to the first homework-->
-                            <a href="https://jacqueline8996.github.io/Homework1/">
-                            <img srcset="Images/homework1.png" alt="Homework1" class="portImg"></a>
+                            <a href="https://github.com/nvandenberge/LetsPlanADay">
+                            <img srcset="Images/Let's_Plan_a_Day!.png" alt="Let's Plan a Day" class="portImg"></a>
                         </div>
                         <div class="col-lg-6">
-                            <!--An image and link to the second homework-->
-                            <a href="https://jacqueline8996.github.io/Homework2/">
-                            <img srcset="Images/profile.png" alt="Homework2" class="portImg"></a>
+                            <!--An image and link to the first homework-->
+                            <a href="https://jacqueline8996.github.io/Homework6/">
+                            <img srcset="Images/WeatherDash.png" alt="Weather Dashboard" class="portImg"></a>
                         </div>
                     </div>
 
                     <!--Row two for images-->
                     <div class="row">
                         <div class="col-lg-6">
+                            <!--An image and link to the second homework-->
+                            <a href="https://jacqueline8996.github.io/Homework4/">
+                            <img srcset="Images/Quiz_Start.png" alt="Homework2" class="portImg"></a>
+                        </div>
+                        <div class="col-lg-6">
                            <!--image and link to github page-->
                             <a href="https://github.com/Jacqueline8996">
                             <img srcset="Images/GitHubPage.png" alt="JacquelineRivera-Git-Hub_page" class="portImg">
                             </a>
                         </div>
+                    </div>
+
+                    <div class="row">
 
                         <div class="col-lg-6">
                             <!--image and link to my linked in-->
@@ -94,9 +102,6 @@
                             <img srcset="Images/LinkedIn.png" alt="LinkedIn-Profile" class="portImg">
                             </a>
                         </div>
-                    </div>
-
-                    <div class="row">
                         <div class="col-lg-6">
 
                             <!--link to my youtube page with a picture-->
@@ -104,9 +109,7 @@
                             <img srcset="Images/YoutubePage.png" alt="Youtube-Page-For-JackieRivera2.3" class="portImg">
                             </a>
                         </div>
-                        <div class="col-lg-6">
-                            <!--blank -->
-                        </div>
+                    
                     </div>
                    
                 </section>
