fixed image and download link

--- a/assets/portfolio.html
+++ b/assets/portfolio.html
@@ -127,7 +127,16 @@
 
     <!--Footer-->
     <footer>
-        <p>Made by Jacqueline Rivera</p>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6">
+                Made by Jacqueline Rivera
+                </div>
+                <div class="col-lg-6">
+                <a href="assets/Downloads/Jacqueline_Rivera2021.pdf" class="download">Download Resume</a>
+                </div>
+            </div>
+        </div>
     </footer>
 
 </body>
