--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
     <!--Footer-->
     <footer >
         <p>Made by Jacqueline Rivera</p>
+        <a href="Downloads/Jacqueline Rivera 2021.pdf">Download Resume</a>
     </footer>
 
 </body>
