--- a/assets/contact.html
+++ b/assets/contact.html
@@ -121,6 +121,7 @@
     <!--Footer-->
     <footer >
         <p>Made by Jacqueline Rivera</p>
+        <a href="Downloads/Jacqueline Rivera 2021.pdf">Download Resume</a>
     </footer>
 
 
