added downloadable Resume

--- a/assets/contact.html
+++ b/assets/contact.html
@@ -119,11 +119,18 @@
     </div>
 
     <!--Footer-->
-    <footer >
-        <p>Made by Jacqueline Rivera</p>
-        <a href="Downloads/Jacqueline Rivera 2021.pdf">Download Resume</a>
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6">
+                Made by Jacqueline Rivera
+                </div>
+                <div class="col-lg-6">
+                <a href="Downloads/Jacqueline_Rivera2021.pdf" class="download" Download>Download Resume</a>
+                </div>
+            </div>
+        </div>
     </footer>
-
 
 </body>
 </html>
