--- a/assets/portfolio.html
+++ b/assets/portfolio.html
@@ -133,7 +133,7 @@
                 Made by Jacqueline Rivera
                 </div>
                 <div class="col-lg-6">
-                <a href="assets/Downloads/Jacqueline_Rivera2021.pdf" class="download">Download Resume</a>
+                <a href="Downloads/Jacqueline_Rivera2021.pdf" class="download" Download>Download Resume</a>
                 </div>
             </div>
         </div>
