updated read me

--- a/assets/contact.html
+++ b/assets/contact.html
@@ -88,7 +88,7 @@
 
                                 <!--Button to submit-->
                                 <div class="col-auto">
-                                    <button type="submit" class="btn btn btn-info mb-2">Submit</button>
+                                    <button type="submit" class="btn btn btn-info mb-2" id="submitEl">Submit</button>
                                 </div>
                             </form>
                         </div>
