updated resume DOwnload

--- a/index.html
+++ b/index.html
@@ -79,6 +79,18 @@
                         <div class="col-md-12">
                             <!--Text about my hobbies -->
                             <p class="ParaText">
+                                Currently Advancing skills as a Full-Stack developer with a strong Scientific Background  able to provide a new perspective. 
+                                As well as background in spanish to include a wider target audience .
+                                Working As a Quality Control Associate , has provided me with an eye to detail in order to assure the best product. 
+                            </p>
+                        </div>
+                    </div>
+
+                    <!--Third Paragraph-->
+                    <div class="row">
+                        <div class="col-md-12">
+                            <!--Text about my hobbies -->
+                            <p class="ParaText">
                                 In my free time I like to paint and draw.
                                 I especially like the hispanic/Latin elements of painters like Diego Rivera and Frida Kahlo. 
                                 This year I started a Youtube page, which I am trying to become more active on. 
